ai: initial generation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Glyphor Fuse Project</title>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ÉTHER | High Fashion Editorial</title>
+    <meta name="description" content="Redefining the silhouette of modern luxury. A digital experience by ÉTHER." />
+    <meta name="theme-color" content="#0a0a0a" />
+    <script type="module" src="/src/main.tsx"></script>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
